	Fix image drawing for large images
	Fix PAINT infinite loop
	Fix keyboard handling for non-us keymaps
	Fix Ctrl+Home editor keystroke handler
	Fix crash with online command if site is down
	Fix over scroll issue with line number widget
	Fix screen dump invalid file name for online files
	Fix file manager .bas file case sensitivity
	Implemented editor F2 command to display online help

2015-10-20
	Fix LET when assigning a value to a MAP/ARRAY field

2015-09-15
	SDL Update PEN(3) to work more like FLTK
	Fix display output before PEN
	Fix BOLD and ITALIC font display
	Context menu edit keyword completion
	Updated program icon
	Editor line number widget can be used for scrolling
	Updated editor help display
	Fix TSAVE with try/catch

2015-08-26
	Editor fixes:
	- now displays an i-beam/edit cursor
	- highlighting for numbers and keywords
	- F1 key for keywords surrounded by punctuation
	- page scrolling with up/down arrow keys
	- pressing tab at the bottom no longer jumps to the top
	- display additional editor context menu items
	Added a basic debugger

2015-08-02
	Fix display output before DELAY
	Fix LET command problem found in 32bit linux
	Removed obsolete/unimplemented keywords WSPLIT, PLOT2, UNLOADLIB

2015-07-18
	Added IDE editor sdl/android
	Made a few minor performance improvements (SDL)

2015-06-07
	Fixed PRINT 1/1000 and other floating point rounding issues
	Fixed problem with 59 char INPUT prompt
	Added missing PEN(12) support
	Added multi-item case selection (suggestion by James Grimaldi)
	SDL: Updated display of file anchor links
	SDL: Fix drag-drop from explorer to launch programs

2015-01-25
	Added timer func support
	Improved syntax error messages
	Remove dependence on malloc_usable_size
	Pass TRUE as an argument to PAUSE to wait for an event

2015-01-18
	Anti-aliased line drawing
	Improved INPUT with clipboard handling
	Improved graphics display performance

2014-12-03
	File-open now uses .bas DIR to locate files

2014-11-06