@@ -107,7 +107,7 @@ Graphics,command,CIRCLE,613,"CIRCLE [STEP] x,y,r [,aspect [, color]] [COLOR colo
 Graphics,command,COLOR,614,"COLOR foreground-color [, background-color]","Specifies the foreground and background colors."
 Graphics,command,DRAW,615,"DRAW ""commands""","Draw lines as specified by the given directional commands. "
 Graphics,command,DRAWPOLY,616,"DRAWPOLY array [,x-origin,y-origin [, scalef [, color]]] [COLOR color] [FILLED]","Draws a polyline. "
-Graphics,command,IMAGE,617,"IMAGE #handle, index, x, y [,sx,sy [,w,h]]","Display a graphical image."
+Graphics,command,IMAGE,617,"IMAGE [#handle | fileName | http://path-to-file.png | image-var | array of pixmap data]","Creates a graphical image object providing access to the following sub-commands: show([x,y [,zindex [,opacity]]]), hide, save([x,y [,w,h]])"
 Graphics,command,LINE,618,"LINE [STEP] x,y [,|STEP x2,y2] [, color| COLOR color]","Draws a line."
 Graphics,command,PAINT,619,"PAINT [STEP] x, y [,fill-color [,border-color]]","Fills an enclosed area on the graphics screen with a specific color. x,y = Screen coordinate (column, row) within the area that is to be filled."
 Graphics,command,PLOT,620,"PLOT xmin, xmax USE f(x)","Graph of f(x)."
