@@ -1,7 +1,7 @@
 smallbasic (0.12.1) unstable; urgency=low
   * Various - see web site
 
- -- Chris Warren-Smith <cwarrensmith@gmail.com>  Sat, 17 Sep 2015 09:45:25 +1000
+ -- Chris Warren-Smith <cwarrensmith@gmail.com>  Sat, 17 Nov 2015 09:45:25 +1000
 
 smallbasic (0.12.0) unstable; urgency=low
   * Various - see web site
