@@ -11,6 +11,7 @@
 	Fix screen dump invalid file name for online files
 	Fix file manager .bas file case sensitivity
 	Implemented editor F2 command to display online help
+	Implemented calling IMAGE with another image variable
 
 2015-10-20
 	Fix LET when assigning a value to a MAP/ARRAY field
